# AgentQuant

./: .gitignore  .gitmessage  .mise.toml  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/agent/: Dockerfile  README.md  pyproject.toml
apps/agent/configs/: config.yaml
apps/agent/src/agent/: __init__.py  prompts.py  redis.py  register.py
apps/agent/src/agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
apps/agent/tests/AgentQuant/: AAPL MA RSI.bru  AAPL MA.bru  NVDA BB.bru  SPY RSI 2d.bru  SPY RSI 2yr.bru  SPY RSI.bru  TSLA BB.bru  bruno.json  code result.bru  storage data.bru
apps/api/: package.json  pyproject.toml
apps/api/agent_quant_api/: __init__.py  main.py
apps/api/tests/: __init__.py  test_main.py
apps/fastapi_sse/: pyproject.toml
apps/fastapi_sse/app/: main.py  sse.py
apps/mcp-server/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/mcp-server/app/: logging.py  main.py  redis.py  sse.py
apps/mcp-server/mcp_server/: config.py  generator.py  k8s.py  logging.py  main.py  models.py  redis.py  sse.py  ticker.py  utils.py
apps/mcp-server/mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/web/: Dockerfile  LICENSE  eslint.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  index.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/api/chat/: route.ts
apps/web/app/api/data/[storageKey]/: route.ts
apps/web/app/api/result/[taskId]/: route.ts
apps/web/app/results/: page.tsx
apps/web/components/agentquant/: AIAgentMonitor.module.css  AIAgentMonitor.tsx  BackgroundPattern.tsx  CandlestickChart.tsx  CentralCommandBar.tsx  KPICards.tsx  Logo.tsx  RSIIndicator.tsx  TaskResultsDisplay.tsx  TradesList.tsx  TradingResults.tsx
apps/web/components/ui/: button.tsx  wavy-background.tsx
apps/web/hooks/: useTaskResult.ts  useTradingResults.ts
apps/web/types/: trading.ts
deploy/: README.md  docker-compose.yaml
deploy/code-runner/: Dockerfile  requirements.txt
deploy/kind/: Dockerfile  kind-config.yaml
